--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -26,6 +26,14 @@ CONFIG_SW_SYNC_USER=y
 CONFIG_MAC80211=y
 CONFIG_CFG80211=y
 
+# IPC
+CONFIG_OMAP_REMOTEPROC=y
+CONFIG_RPMSG_RPC=y
+
+# Firmware loader Helper needed by IPC
+CONFIG_FW_LOADER_USER_HELPER=y
+CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
+
 # Misc.
 CONFIG_DEVTMPFS=n
 CONFIG_DEVMEM=y
