ti_config_fragments: android_omap: enable ftrace
Enable ftrace config for android. PVR kernel module
also expects GPU_TRACEPOINTS enabled for ftrace.

Change-Id: I82198a6efa98f00f207578fa26f45cb55d213721
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>

--- a/kernel/trace/Kconfig
+++ b/kernel/trace/Kconfig
@@ -106,6 +106,7 @@ config TRACING
 	select BINARY_PRINTF
 	select EVENT_TRACING
 	select TRACE_CLOCK
+	select GPU_TRACEPOINTS
 
 config GENERIC_TRACER
 	bool
