Input: goodix - add polling support for touch events
poll for touchscreen events in case the touch irq is not specified.

Change-Id: I0a23d2cb3a185e3c2d2ff142eb37be738c10c557
Signed-off-by: Venkateswara Rao Mandela <venkat.mandela@ti.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -325,6 +325,7 @@ config TOUCHSCREEN_GOODIX
 	tristate "Goodix I2C touchscreen"
 	depends on I2C
 	depends on GPIOLIB
+	select INPUT_POLLDEV
 	help
 	  Say Y here if you have the Goodix touchscreen (such as one
 	  installed in Onda v975w tablets) connected to your
