arm: dts: dra76: enable auo fpdlink display
- setup the board mux to drive DSS signal to VOUT3
- toggle the onboard switch via GPIO to supply power to display via FPDLink.
- setup the serializer to map the I2C address of any accessed slave on
the remote I2C bus to 0x2d on the local bus on demand.
- link the DSS and fpdlink endpoints.

Change-Id: I6bd37f769405fc473e6275fa690c8ca88d79dd62
Signed-off-by: Venkateswara Rao Mandela <venkat.mandela@ti.com>

--- a/arch/arm/boot/dts/dra76-evm.dts
+++ b/arch/arm/boot/dts/dra76-evm.dts
@@ -54,6 +54,10 @@
 		};
 	};
 
+	aliases {
+		i2c7 = &disp_ser;
+	};
+
 	vsys_12v0: fixedregulator-vsys12v0 {
 		/* main supply */
 		compatible = "regulator-fixed";
@@ -474,9 +478,35 @@
 	phy-supply = <&ldo3_reg>;
 };
 
+&i2c3 {
+	disp_ser: serializer@0c {
+		compatible = "ti,ds90ub921q";
+		reg = <0x0c>;
+
+		#address-cells = <1>;
+		#size-cells = <0>;
+		status = "disabled";
+	};
+};
+
 &dss {
 	status = "ok";
 	vdda_video-supply = <&ldo5_reg>;
+
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		status = "disabled";
+
+		port@lcd3 {
+			reg = <2>;
+
+			dpi_out3: endpoint {
+				data-lines = <24>;
+			};
+		};
+	};
 };
 
 &hdmi {
