--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -7,5 +7,13 @@
 # recommended options
 ###############################################################################
 CONFIG_MODULES=y
-CONFIG_CMDLINE="root=/dev/mmcblk1p2 rw console=ttyO0,119200 androidboot.console=ttyO0 init=/init rootfstype=ext4 rootwait drm.rnodes=1"
+CONFIG_CMDLINE="root=/dev/mmcblk0p2 rw init=/init rootfstype=ext4 rootwait drm.rnodes=1 androidboot.selinux=permissive snd.slots_reserved=1,1 snd-soc-core.pmdown_time=-1 uio_pdrv_genirq.of_id=generic-uio console=ttyS0,115200 androidboot.console=ttyS0 androidboot.hardware=jacinto6evmboard"
 CONFIG_CMDLINE_EXTEND=y
+
+# USB DWC3
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC3_OMAP=y
+
+# Extcon drivers
+CONFIG_EXTCON=y
+CONFIG_EXTCON_USB_GPIO=y
