ti_config_fragments: android_omap.cfg: Enable SW_SYNC
Enable SW_SYNC : Needed for SGX driver in Android

Change-Id: I2c9ab5b68c96572630f4ea91d940a6840a217918
Signed-off-by: Praneeth Bajjuri <praneeth@ti.com>

--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -17,3 +17,7 @@ CONFIG_USB_DWC3_OMAP=y
 # Extcon drivers
 CONFIG_EXTCON=y
 CONFIG_EXTCON_USB_GPIO=y
+
+# SW_SYNC
+CONFIG_SW_SYNC=y
+CONFIG_SW_SYNC_USER=y
