ti_config_fragments: android_omap: enable jamr3 configs as module
JAMR3 board specific drivers for vision, sound and jamr3 are
configured as modules.

Change-Id: I2353fce38a4431d7ee3c10e9954ce25073a569cb
Signed-off-by: Subash Lakkimsetti <x0091084@ti.com>

--- a/ti_config_fragments/auto.cfg
+++ b/ti_config_fragments/auto.cfg
@@ -11,7 +11,7 @@ CONFIG_TOUCHSCREEN_GOODIX=y
 # Audio/Display options
 #
 CONFIG_SND_SIMPLE_CARD=y
-CONFIG_SND_SOC_TLV320AIC3X=y
+CONFIG_SND_SOC_TLV320AIC3X=m
 CONFIG_SND_SOC_HDMI_CODEC=y
 CONFIG_SND_OMAP_SOC_HDMI_AUDIO=y
 
@@ -28,13 +28,13 @@ CONFIG_VIDEO_TI_VIP=y
 CONFIG_VIDEO_TI_VPE=y
 CONFIG_VIDEO_TI_VPDMA_HELPER=y
 CONFIG_VIDEO_TI_VPDMA_LOAD_FW=y
-CONFIG_VIDEO_OV1063X=y
-CONFIG_GPIO_PCA953X=y
-CONFIG_VIDEO_OV490=y
+CONFIG_VIDEO_OV1063X=m
+CONFIG_GPIO_PCA953X=m
+CONFIG_VIDEO_OV490=m
 
 #JAMR and Vision options
-CONFIG_VIDEO_TVP5158=y
-CONFIG_GPIO_MCP23S08=y
+CONFIG_VIDEO_TVP5158=m
+CONFIG_GPIO_MCP23S08=m
 
 #Debug related
 CONFIG_DEBUG_LL=y
