ti_config_fragments: android_omap: enable panel drivers as module
Board specific drivers for display pannel, hdmi, display encoders,
backlight and led drivers are configured to modules.

Change-Id: Ie22f11777acf79642db1082072ec93578e779a4b
Signed-off-by: Subash Lakkimsetti <x0091084@ti.com>

--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -43,3 +43,17 @@ CONFIG_FTRACE=y
 
 # INTERACTIVE Governor
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+
+# Display
+CONFIG_LEDS_CLASS=m
+CONFIG_LEDS_TLC591XX=m
+CONFIG_BACKLIGHT_PWM=m
+CONFIG_BACKLIGHT_GPIO=m
+CONFIG_BACKLIGHT_LED=m
+CONFIG_DISPLAY_PANEL_DPI=m
+CONFIG_DISPLAY_CONNECTOR_HDMI=m
+CONFIG_DISPLAY_DRA7EVM_ENCODER_TPD12S015=m
+CONFIG_DISPLAY_ENCODER_TPD12S015=m
+CONFIG_DISPLAY_ENCODER_SII9022=m
+CONFIG_DISPLAY_ENCODER_TC358768=m
+CONFIG_VIDEO_TI_FPD3_SERDES=m
