--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -57,3 +57,10 @@ CONFIG_DISPLAY_ENCODER_TPD12S015=m
 CONFIG_DISPLAY_ENCODER_SII9022=m
 CONFIG_DISPLAY_ENCODER_TC358768=m
 CONFIG_VIDEO_TI_FPD3_SERDES=m
+
+# Touch screen
+CONFIG_TOUCHSCREEN_EDT_FT5X06=m
+CONFIG_TOUCHSCREEN_GOODIX=m
+CONFIG_TOUCHSCREEN_ATMEL_MXT=m
+CONFIG_TOUCHSCREEN_PIXCIR=m
+CONFIG_TOUCHSCREEN_LDC3001=m
