--- a/arch/arm/boot/dts/am57xx-evm-common.dtsi
+++ b/arch/arm/boot/dts/am57xx-evm-common.dtsi
@@ -8,6 +8,7 @@
 
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
+#include "dra7xx-android-fstab.dtsi"
 
 / {
 	compatible = "ti,am5728-evm", "ti,am572x-beagle-x15", "ti,am5728", "ti,dra742", "ti,dra74", "ti,dra7";
