arm: dts: dra76-evm: Add JAMR support
Enable i2c4 and vin1a required for TVP5158 capture

Add device tree nodes which expose the base board devices
through the expansion board for JAMR board.
This includes video port, i2c bus and voltage regulators.

Change-Id: I6e286b3875eb0539cfa5db44d5d6772ddbcab518
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/arch/arm/boot/dts/dra76-evm.dts
+++ b/arch/arm/boot/dts/dra76-evm.dts
@@ -21,7 +21,7 @@
 		reg = <0x0 0x80000000 0x0 0x80000000>;
 	};
 
-	reserved-memory {
+	reserved_mem: reserved-memory {
 		#address-cells = <2>;
 		#size-cells = <2>;
 		ranges;
@@ -650,4 +650,19 @@
 		slave-mode;
 		remote-endpoint = <&csi2_cam0>;
 	};
+};
+
+video_in: &vin1a {
+	status = "okay";
+};
+
+/* Expose generic DT labels for adapter board */
+video_in: &vin1a {};
+i2c_p3_exp: &i2c5 {};
+evm_3v3_sw: &vio_3v3 {};
+
+#include "dra7xx-jamr3.dtsi"
+&tvp_5158{
+	mux-gpios = <&pcf_jamr3_21 8 GPIO_ACTIVE_LOW>;	/*SEL_TVP_FPD*/
+	/* No board muxes on baseboard */
 };
