ti_config_fragments: android_omap: enable CAN
Add CAN drivers and networking as built in.

Change-Id: Ibd89288bfa35796e8a9313ce25083ea1a286bea7
Signed-off-by: David Huang <d-huang@ti.com>

--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -68,3 +68,8 @@ CONFIG_TOUCHSCREEN_GOODIX=m
 CONFIG_TOUCHSCREEN_ATMEL_MXT=m
 CONFIG_TOUCHSCREEN_PIXCIR=m
 CONFIG_TOUCHSCREEN_LDC3001=m
+
+# CAN
+CONFIG_CAN=y
+CONFIG_CAN_C_CAN=y
+CONFIG_CAN_C_CAN_PLATFORM=y
