ti_config_fragments: android: Change compression method to LZ4
'commit d707e1adefcf ("ti_config_fragments: baseport: Choose LZMA as compression choice")'

with LZMA:
[3.791007 0.000033] Starting kernel ...
[0.001972 0.001972]
[3.462098 3.460126] [    0.000000] Booting Linux on physical CPU 0x0

with LZ4:

[3.848054 0.000133] Starting kernel ...
[0.001136 0.001136]
[1.835026 1.833890] [    0.000000] Booting Linux on physical CPU 0x0

The tradeoff in using LZ4 is increase in kernel image size.

LZMA is good for smaller image size, whereas LZ4 for faster decompression
and boot time.

For android , it is preferred to have faster boot time hence changing to
LZ4 to save ~1600 ms

Change-Id: I9d7cd5a9254d9601e034672d9bccdde92be980e6
Signed-off-by: Praneeth Bajjuri <praneeth@ti.com>

--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -10,6 +10,10 @@ CONFIG_MODULES=y
 CONFIG_CMDLINE="root=/dev/mmcblk0p2 rw init=/init rootfstype=ext4 rootwait drm.rnodes=1 androidboot.selinux=permissive snd.slots_reserved=1,1 snd-soc-core.pmdown_time=-1 uio_pdrv_genirq.of_id=generic-uio console=ttyS0,115200 androidboot.console=ttyS0 androidboot.hardware=jacinto6evmboard"
 CONFIG_CMDLINE_EXTEND=y
 
+# Optimizations
+CONFIG_KERNEL_LZMA=n
+CONFIG_KERNEL_LZ4=y
+
 # USB DWC3
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_OMAP=y
