--- a/arch/arm/boot/dts/omap5-board-common.dtsi
+++ b/arch/arm/boot/dts/omap5-board-common.dtsi
@@ -289,6 +289,7 @@
 			OMAP5_IOPAD(0x1b4, PIN_INPUT_PULLUP | MUX_MODE0) /* uart5_cts.uart5_rts */
 			OMAP5_IOPAD(0x1b6, PIN_OUTPUT | MUX_MODE0) /* uart5_cts.uart5_rts */
                         OMAP5_IOPAD(0x1c0, PIN_OUTPUT_PULLUP | MUX_MODE6) /* BT wakup  */
+                        OMAP5_IOPAD(0x1c2, PIN_OUTPUT_PULLUP | MUX_MODE6) /* BT wakup  */
 		>;
 	};
 
