--- a/ti_config_fragments/android_am57x.cfg
+++ b/ti_config_fragments/android_am57x.cfg
@@ -10,3 +10,19 @@
 ###############################################################################
 
 CONFIG_CMDLINE="root=/dev/mmcblk0p2 rw init=/init rootfstype=ext4 rootwait drm.rnodes=1 androidboot.selinux=permissive snd.slots_reserved=1,1 snd-soc-core.pmdown_time=-1 uio_pdrv_genirq.of_id=generic-uio console=ttyS2,115200 androidboot.console=ttyS2 androidboot.hardware=am57xevmboard"
+
+# Display
+CONFIG_LEDS_CLASS=y
+CONFIG_LEDS_TLC591XX=y
+CONFIG_BACKLIGHT_PWM=y
+CONFIG_BACKLIGHT_GPIO=y
+CONFIG_BACKLIGHT_LED=y
+CONFIG_DISPLAY_PANEL_DPI=y
+CONFIG_DISPLAY_CONNECTOR_HDMI=y
+CONFIG_DISPLAY_DRA7EVM_ENCODER_TPD12S015=y
+CONFIG_DISPLAY_ENCODER_TPD12S015=y
+CONFIG_DISPLAY_ENCODER_SII9022=y
+CONFIG_DISPLAY_ENCODER_TC358768=y
+
+# Touch screen
+CONFIG_TOUCHSCREEN_PIXCIR=y
