--- a/ti_config_fragments/android_am57x.cfg
+++ b/ti_config_fragments/android_am57x.cfg
@@ -11,6 +11,13 @@
 
 CONFIG_CMDLINE="root=/dev/mmcblk0p2 rw init=/init rootfstype=ext4 rootwait drm.rnodes=1 androidboot.selinux=permissive snd.slots_reserved=1,1 snd-soc-core.pmdown_time=-1 uio_pdrv_genirq.of_id=generic-uio console=ttyS2,115200 androidboot.console=ttyS2 androidboot.hardware=am57xevmboard"
 
+# USB
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC3_OMAP=y
+CONFIG_SCSI=y
+CONFIG_USB_STORAGE=y
+CONFIG_EXTCON_PALMAS=y
+
 # Display
 CONFIG_LEDS_CLASS=y
 CONFIG_LEDS_TLC591XX=y
