arm: dts: dra7: restructure late attach dts
- Extract the common portions of late attach device tree attributes
into dra7x-late.dtsi.

- Enable late attach for a remotecore by defining a corresponding
  macro.

- Use a macro for setting the 3 late attach attributes on each node
  that needs to be modified.

Change-Id: I0a77742a4b7220d1d9542c6af80569e537802ddb
Signed-off-by: Venkateswara Rao Mandela <venkat.mandela@ti.com>

--- a/arch/arm/boot/dts/dra7-evm-lcd-osd-late-attach.dts
+++ b/arch/arm/boot/dts/dra7-evm-lcd-osd-late-attach.dts
@@ -8,145 +8,6 @@
 
 #include "dra7-evm-lcd-osd.dts"
 
-/*
- * Memory reserved for IOMMU table carveout 0xbfc00000 for length 0x100000
- * Page Table Address for IPU1   0xbfc00000
- * Page Table Address for IPU2   0xbfc08000
- * Page Table Address for DSP1   0xbfc10000
- * Page Table Address for DSP2   0xbfc18000
- */
+#define IPU2_LATE_ATTACH
 
-&reserved_mem {
-	latea_pagetbl: late_pgtbl@bfc00000 {
-		reg = <0x0 0xbfc00000 0x0 0x100000>;
-		no-map;
-		status = "okay";
-	};
-};
-
-&ipu2 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer3 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer4 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer9 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu_ipu2{
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-/*Uncomment below block to enable late attach for IPU1*/
-
-/*
-&ipu1 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer11 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer7 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer8 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu_ipu1{
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-*/
-
-/*Uncomment below block to enable late attach for DSP1*/
-
-/*
-&dsp1 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer5 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer10 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu0_dsp1 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu1_dsp1 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-*/
-
-/*Uncomment below block to enable late attach for DSP2*/
-
-/*
-&dsp2 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&timer6 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu0_dsp2 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-
-&mmu1_dsp2 {
-	ti,late-attach;
-	ti,no-idle-on-init;
-	ti,no-reset-on-init;
-};
-*/
-
+#include "dra7x-late.dtsi"
