--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -524,7 +524,11 @@ dtb-$(CONFIG_SOC_DRA7XX) += \
 	dra71-evm.dtb \
 	dra71-evm-lcd-auo-g101evn01.0.dtb \
 	dra76-evm.dtb \
-	dra76-evm-fpd-auo-g101evn01.0.dtb
+	dra76-evm-fpd-auo-g101evn01.0.dtb \
+	dra7-evm-late-attach.dtb \
+	dra72-evm-late-attach.dtb \
+	dra71-evm-late-attach.dtb \
+	dra76-evm-late-attach.dtb
 dtb-$(CONFIG_ARCH_ORION5X) += \
 	orion5x-lacie-d2-network.dtb \
 	orion5x-lacie-ethernet-disk-mini-v2.dtb \
