update use omap5 sham

--- a/arch/arm/configs/omap5_uevm_defconfig
+++ b/arch/arm/configs/omap5_uevm_defconfig
@@ -2996,16 +2996,16 @@ CONFIG_OMAP_DSS_BASE=y
 CONFIG_OMAP2_DSS=y
 # CONFIG_OMAP2_DSS_DEBUG is not set
 # CONFIG_OMAP2_DSS_DEBUGFS is not set
-# CONFIG_OMAP2_DSS_DPI is not set
+CONFIG_OMAP2_DSS_DPI=y
 # CONFIG_OMAP2_DSS_VENC is not set
 CONFIG_OMAP2_DSS_HDMI_COMMON=y
 # CONFIG_OMAP4_DSS_HDMI is not set
 CONFIG_OMAP5_DSS_HDMI=y
-# CONFIG_OMAP2_DSS_SDI is not set
-# CONFIG_OMAP2_DSS_DSI is not set
+CONFIG_OMAP2_DSS_SDI=y
+CONFIG_OMAP2_DSS_DSI=y
 CONFIG_OMAP2_DSS_MIN_FCK_PER_PCK=0
 # CONFIG_OMAP2_DSS_SLEEP_AFTER_VENC_RESET is not set
-CONFIG_TI_DSS6=y
+# CONFIG_TI_DSS6 is not set
 
 #
 # OMAPDRM External Display Device Drivers
