--- a/arch/arm/configs/omap5_uevm_defconfig
+++ b/arch/arm/configs/omap5_uevm_defconfig
@@ -2175,10 +2175,11 @@ CONFIG_GPIO_SYSCON=y
 # CONFIG_GPIO_ADNP is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-CONFIG_GPIO_PCA953X=m
-CONFIG_GPIO_PCF857X=y
+CONFIG_GPIO_PCA953X=y
+# CONFIG_GPIO_PCA953X_IRQ is not set
+# CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
-CONFIG_GPIO_TPIC2810=m
+# CONFIG_GPIO_TPIC2810 is not set
 # CONFIG_GPIO_TS4900 is not set
 
 #
