--- a/arch/arm/configs/omap5_uevm_defconfig
+++ b/arch/arm/configs/omap5_uevm_defconfig
@@ -2977,7 +2977,7 @@ CONFIG_DRM_FBDEV_EMULATION=y
 #
 # CONFIG_DRM_I2C_CH7006 is not set
 # CONFIG_DRM_I2C_SIL164 is not set
-CONFIG_DRM_I2C_NXP_TDA998X=y
+# CONFIG_DRM_I2C_NXP_TDA998X is not set
 # CONFIG_DRM_HDLCD is not set
 # CONFIG_DRM_MALI_DISPLAY is not set
 
@@ -3021,8 +3021,8 @@ CONFIG_DRM_OMAP_ENCODER_TPD12S015=y
 # CONFIG_DRM_OMAP_CONNECTOR_DVI is not set
 CONFIG_DRM_OMAP_CONNECTOR_HDMI=y
 # CONFIG_DRM_OMAP_CONNECTOR_ANALOG_TV is not set
-CONFIG_DRM_OMAP_PANEL_DPI=y
-CONFIG_DRM_OMAP_PANEL_DSI_CM=y
+# CONFIG_DRM_OMAP_PANEL_DPI is not set
+# CONFIG_DRM_OMAP_PANEL_DSI_CM is not set
 # CONFIG_DRM_OMAP_PANEL_SONY_ACX565AKM is not set
 # CONFIG_DRM_OMAP_PANEL_LGPHILIPS_LB035Q02 is not set
 # CONFIG_DRM_OMAP_PANEL_SHARP_LS037V7DW01 is not set
@@ -3131,8 +3131,6 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
-CONFIG_SND_PCM_ELD=y
-CONFIG_SND_PCM_IEC958=y
 CONFIG_SND_DMAENGINE_PCM=y
 CONFIG_SND_RAWMIDI=m
 CONFIG_SND_JACK=y
@@ -3199,7 +3197,7 @@ CONFIG_SND_DAVINCI_SOC_MCASP=m
 CONFIG_SND_OMAP_SOC=y
 CONFIG_SND_OMAP_SOC_DMIC=m
 CONFIG_SND_OMAP_SOC_MCPDM=m
-CONFIG_SND_OMAP_SOC_HDMI_AUDIO=m
+# CONFIG_SND_OMAP_SOC_HDMI_AUDIO is not set
 # CONFIG_SND_OMAP_SOC_RX51 is not set
 CONFIG_SND_OMAP_SOC_OMAP_ABE_TWL6040=m
 # CONFIG_SND_KIRKWOOD_SOC is not set
@@ -3250,7 +3248,6 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_CS4349 is not set
 # CONFIG_SND_SOC_CS53L30 is not set
 CONFIG_SND_SOC_DMIC=m
-CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_ES8328 is not set
 # CONFIG_SND_SOC_GTM601 is not set
 # CONFIG_SND_SOC_INNO_RK3036 is not set
