--- a/ti_config_fragments/android_am57x.cfg
+++ b/ti_config_fragments/android_am57x.cfg
@@ -14,22 +14,9 @@ CONFIG_CMDLINE="root=/dev/mmcblk0p2 rw init=/init rootfstype=ext4 rootwait drm.r
 # USB
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC3_OMAP=y
-CONFIG_SCSI=y
+# CONFIG_SCSI=y
 CONFIG_USB_STORAGE=y
 CONFIG_EXTCON_PALMAS=y
 
-# Display
-CONFIG_LEDS_CLASS=y
-CONFIG_LEDS_TLC591XX=y
-CONFIG_BACKLIGHT_PWM=y
-CONFIG_BACKLIGHT_GPIO=y
-CONFIG_BACKLIGHT_LED=y
-CONFIG_DISPLAY_PANEL_DPI=y
-CONFIG_DISPLAY_CONNECTOR_HDMI=y
-CONFIG_DISPLAY_DRA7EVM_ENCODER_TPD12S015=y
-CONFIG_DISPLAY_ENCODER_TPD12S015=y
-CONFIG_DISPLAY_ENCODER_SII9022=y
-CONFIG_DISPLAY_ENCODER_TC358768=y
-
 # Touch screen
-CONFIG_TOUCHSCREEN_PIXCIR=y
+CONFIG_TOUCHSCREEN_PIXCIR=m
