am57x: dts: idk: add android early mount partitions
Add support for mounting Android partitions "system" and
"vendor" early. This is for first stage mount done by init.

Other partitions like "data", "cache", etc.. continue to be
loaded by fstab file.

[1] https://source.android.com/devices/architecture/kernel/modular-kernels#mounting-partitions-early-first-stage-mount

Change-Id: I5310733e8ac8ac3f3891ab03e435ad8a9a223c65
Signed-off-by: Praneeth Bajjuri <praneeth@ti.com>

--- a/arch/arm/boot/dts/am57xx-idk-common.dtsi
+++ b/arch/arm/boot/dts/am57xx-idk-common.dtsi
@@ -6,6 +6,7 @@
  * published by the Free Software Foundation.
  */
 #include "am57xx-industrial-grade.dtsi"
+#include "dra7xx-android-fstab.dtsi"
 
 / {
 	aliases {
