--- a/arch/arm/boot/dts/omap5-board-common.dtsi
+++ b/arch/arm/boot/dts/omap5-board-common.dtsi
@@ -329,6 +329,7 @@
 &mmc1 {
 	vmmc-supply = <&ldo9_reg>;
 	bus-width = <4>;
+	cd-gpios = <&gpio5 24 GPIO_ACTIVE_LOW>;
 };
 
 &mmc2 {
@@ -596,7 +597,7 @@
 					/* VCC_DV_SDIO: vdds_sdcard */
 					regulator-name = "ldo9";
 					regulator-min-microvolt = <1800000>;
-					regulator-max-microvolt = <3000000>;
+					regulator-max-microvolt = <3300000>;
 					regulator-boot-on;
 				};
 
