--- a/ti_config_fragments/android_omap.cfg
+++ b/ti_config_fragments/android_omap.cfg
@@ -56,11 +56,13 @@ CONFIG_BACKLIGHT_GPIO=m
 CONFIG_BACKLIGHT_LED=m
 CONFIG_DISPLAY_PANEL_DPI=m
 CONFIG_DISPLAY_CONNECTOR_HDMI=m
+CONFIG_DISPLAY_CONNECTOR_DVI=m
 CONFIG_DISPLAY_DRA7EVM_ENCODER_TPD12S015=m
 CONFIG_DISPLAY_ENCODER_TPD12S015=m
 CONFIG_DISPLAY_ENCODER_SII9022=m
 CONFIG_DISPLAY_ENCODER_TC358768=m
 CONFIG_VIDEO_TI_FPD3_SERDES=m
+CONFIG_DISPLAY_ENCODER_TFP410=m
 
 # Touch screen
 CONFIG_TOUCHSCREEN_EDT_FT5X06=m
